@startuml API REST - Arquitectura Hexagonal
!theme plain
skinparam componentStyle rectangle
skinparam linetype ortho

title API REST - Diagrama de Componentes\nArquitectura Hexagonal por Módulos

' ====================================
' MÓDULO AUTH
' ====================================
package "Auth Module" as AUTH #LightBlue {
    
    package "Domain" as AUTH_DOMAIN #WhiteSmoke {
        component "User Entity" as AUTH_USER
        component "Email VO" as AUTH_EMAIL
        component "Password VO" as AUTH_PASSWORD
        component "Role Enum" as AUTH_ROLE
        
        interface "UserRepositoryInterface" as AUTH_REPO_IF
        interface "TokenServiceInterface" as AUTH_TOKEN_IF
    }
    
    package "Application" as AUTH_APP #LightGray {
        component "RegisterUser" as AUTH_UC_REGISTER
        component "LoginUser" as AUTH_UC_LOGIN
        component "LogoutUser" as AUTH_UC_LOGOUT
        component "CreateAdminUser" as AUTH_UC_ADMIN
        
        component "LoginDTO" as AUTH_DTO_LOGIN
        component "RegisterUserDTO" as AUTH_DTO_REGISTER
    }
    
    package "Infrastructure" as AUTH_INFRA #DarkGray {
        component "PostRegisterUserController" as AUTH_CTRL_REGISTER
        component "PostLoginUserController" as AUTH_CTRL_LOGIN
        component "PostLogoutUserController" as AUTH_CTRL_LOGOUT
        component "GetAuthenticatedUserController" as AUTH_CTRL_USER
        
        component "EloquentUserRepository" as AUTH_REPO_ELOQUENT
        component "PassportTokenService" as AUTH_TOKEN_PASSPORT
        
        component "UserModel (Eloquent)" as AUTH_MODEL
        
        component "EnsureUserIsAdmin\nMiddleware" as AUTH_MIDDLEWARE
        component "CreateAdminCommand" as AUTH_COMMAND
    }
}

' ====================================
' MÓDULO MEDIA
' ====================================
package "Media Module" as MEDIA #LightGreen {
    
    package "Domain" as MEDIA_DOMAIN #WhiteSmoke {
        component "MediaItem Entity" as MEDIA_ITEM
        component "SearchQuery VO" as MEDIA_QUERY
        component "Limit VO" as MEDIA_LIMIT
        component "Offset VO" as MEDIA_OFFSET
        
        interface "MediaRepositoryInterface" as MEDIA_REPO_IF
    }
    
    package "Application" as MEDIA_APP #LightGray {
        component "SearchMedia" as MEDIA_UC_SEARCH
        component "GetMediaById" as MEDIA_UC_GETBYID
        
        component "SearchMediaDTO" as MEDIA_DTO_SEARCH
        component "GetMediaByIdDTO" as MEDIA_DTO_GETBYID
    }
    
    package "Infrastructure" as MEDIA_INFRA #DarkGray {
        component "GetMediaSearchController" as MEDIA_CTRL_SEARCH
        component "GetMediaByIdController" as MEDIA_CTRL_GETBYID
        
        component "GiphyMediaRepository" as MEDIA_REPO_GIPHY
    }
}

' ====================================
' MÓDULO AUDIT
' ====================================
package "Audit Module" as AUDIT #LightYellow {
    
    package "Domain" as AUDIT_DOMAIN #WhiteSmoke {
        component "AuditLog Entity" as AUDIT_LOG
        
        interface "AuditLogRepositoryInterface" as AUDIT_REPO_IF
    }
    
    package "Application" as AUDIT_APP #LightGray {
        component "CreateAuditLog" as AUDIT_UC_CREATE
        
        component "CreateAuditLogDTO" as AUDIT_DTO_CREATE
    }
    
    package "Infrastructure" as AUDIT_INFRA #DarkGray {
        component "LogRequestAudited\nListener" as AUDIT_LISTENER
        
        component "EloquentAuditLogRepository" as AUDIT_REPO_ELOQUENT
        
        component "AuditLogModel (Eloquent)" as AUDIT_MODEL
    }
}

' ====================================
' MÓDULO SYSTEM
' ====================================
package "System Module" as SYSTEM #LightCoral {
    
    package "Domain" as SYSTEM_DOMAIN #WhiteSmoke {
        component "SystemHealth Entity" as SYSTEM_HEALTH
        component "Version VO" as SYSTEM_VERSION
    }
    
    package "Application" as SYSTEM_APP #LightGray {
        component "GetSystemHealth" as SYSTEM_UC_HEALTH
    }
    
    package "Infrastructure" as SYSTEM_INFRA #DarkGray {
        component "GetSystemHealthController" as SYSTEM_CTRL_HEALTH
    }
}

' ====================================
' SERVICIOS EXTERNOS
' ====================================
cloud "External Services" as EXTERNAL {
    component "GIPHY API" as GIPHY_API #Orange
    database "MySQL" as MYSQL #LightSteelBlue
}

' ====================================
' FRAMEWORK LARAVEL
' ====================================
package "Laravel Framework" as LARAVEL #Lavender {
    component "Router" as LARAVEL_ROUTER
    component "Middleware Pipeline" as LARAVEL_MIDDLEWARE
    component "Service Container" as LARAVEL_CONTAINER
    component "Event Dispatcher" as LARAVEL_EVENTS
    component "Eloquent ORM" as LARAVEL_ELOQUENT
}

package "Laravel Passport" as PASSPORT #Plum {
    component "OAuth2 Server" as PASSPORT_OAUTH
    component "Token Guard" as PASSPORT_GUARD
}

package "Guzzle HTTP" as GUZZLE #LightSalmon {
    component "HTTP Client" as GUZZLE_CLIENT
}

' ====================================
' RELACIONES - AUTH MODULE
' ====================================
AUTH_UC_REGISTER ..> AUTH_REPO_IF : uses
AUTH_UC_LOGIN ..> AUTH_REPO_IF : uses
AUTH_UC_LOGIN ..> AUTH_TOKEN_IF : uses
AUTH_UC_LOGOUT ..> AUTH_REPO_IF : uses
AUTH_UC_ADMIN ..> AUTH_REPO_IF : uses

AUTH_REPO_ELOQUENT ..|> AUTH_REPO_IF : implements
AUTH_TOKEN_PASSPORT ..|> AUTH_TOKEN_IF : implements

AUTH_CTRL_REGISTER --> AUTH_UC_REGISTER : invokes
AUTH_CTRL_LOGIN --> AUTH_UC_LOGIN : invokes
AUTH_CTRL_LOGOUT --> AUTH_UC_LOGOUT : invokes
AUTH_CTRL_USER --> AUTH_REPO_IF : uses
AUTH_COMMAND --> AUTH_UC_ADMIN : invokes

AUTH_REPO_ELOQUENT --> AUTH_MODEL : uses
AUTH_MODEL --> LARAVEL_ELOQUENT : extends
AUTH_TOKEN_PASSPORT --> PASSPORT_OAUTH : uses

' ====================================
' RELACIONES - MEDIA MODULE
' ====================================
MEDIA_UC_SEARCH ..> MEDIA_REPO_IF : uses
MEDIA_UC_GETBYID ..> MEDIA_REPO_IF : uses

MEDIA_REPO_GIPHY ..|> MEDIA_REPO_IF : implements

MEDIA_CTRL_SEARCH --> MEDIA_UC_SEARCH : invokes
MEDIA_CTRL_GETBYID --> MEDIA_UC_GETBYID : invokes

MEDIA_REPO_GIPHY --> GUZZLE_CLIENT : uses
GUZZLE_CLIENT --> GIPHY_API : HTTP requests

' ====================================
' RELACIONES - AUDIT MODULE
' ====================================
AUDIT_UC_CREATE ..> AUDIT_REPO_IF : uses

AUDIT_REPO_ELOQUENT ..|> AUDIT_REPO_IF : implements

AUDIT_LISTENER --> AUDIT_UC_CREATE : invokes
AUDIT_LISTENER --> LARAVEL_EVENTS : listens to\nRequestHandled

AUDIT_REPO_ELOQUENT --> AUDIT_MODEL : uses
AUDIT_MODEL --> LARAVEL_ELOQUENT : extends

' ====================================
' RELACIONES - SYSTEM MODULE
' ====================================
SYSTEM_CTRL_HEALTH --> SYSTEM_UC_HEALTH : invokes

' ====================================
' RELACIONES - FRAMEWORK
' ====================================
LARAVEL_ROUTER --> AUTH_CTRL_REGISTER
LARAVEL_ROUTER --> AUTH_CTRL_LOGIN
LARAVEL_ROUTER --> AUTH_CTRL_LOGOUT
LARAVEL_ROUTER --> AUTH_CTRL_USER
LARAVEL_ROUTER --> MEDIA_CTRL_SEARCH
LARAVEL_ROUTER --> MEDIA_CTRL_GETBYID
LARAVEL_ROUTER --> SYSTEM_CTRL_HEALTH

LARAVEL_MIDDLEWARE --> AUTH_MIDDLEWARE : includes
LARAVEL_MIDDLEWARE --> PASSPORT_GUARD : includes

LARAVEL_CONTAINER --> AUTH_REPO_ELOQUENT : binds
LARAVEL_CONTAINER --> AUTH_TOKEN_PASSPORT : binds
LARAVEL_CONTAINER --> MEDIA_REPO_GIPHY : binds
LARAVEL_CONTAINER --> AUDIT_REPO_ELOQUENT : binds

LARAVEL_ELOQUENT --> MYSQL : reads/writes

' ====================================
' NOTAS
' ====================================
note right of AUTH_DOMAIN
  <b>Domain Layer</b>
  - Pure PHP
  - No frameworks
  - Business logic
  - Interfaces (Ports)
end note

note right of AUTH_APP
  <b>Application Layer</b>
  - Use Cases
  - DTOs
  - Orchestration
  - Depends only on Domain
end note

note right of AUTH_INFRA
  <b>Infrastructure Layer</b>
  - Controllers
  - Repositories (Adapters)
  - External integrations
  - Framework-specific code
end note

note top of LARAVEL
  <b>Framework Layer</b>
  Provides infrastructure
  for all modules
end note

note bottom of EXTERNAL
  <b>External Dependencies</b>
  - GIPHY: Media provider
  - MySQL: Data persistence
end note

@enduml
